--- a/spec_design/Background.html
+++ b/spec_design/Background.html
@@ -1,4 +1,4 @@
-{{ block title }}<span style="display: none;">About Livit Tech</span>{{ endblock }}
+{{ block title }}<span style="display: none;">Case Instructions</span>{{ endblock }}
 {{ block content }}
 
 <style>
@@ -79,7 +79,7 @@
 <div class="background-container">
     <div class="company-header">
         <div class="company-icon">🍎</div>
-        <h3>NutriGen Foods</h3>
+        <h3>Case Instructions: NutriGen Foods</h3>
         <p class="text-muted">Neo Fruits Product Innovation</p>
     </div>
 
