--- a/spec_design/CLT_Condition.html
+++ b/spec_design/CLT_Condition.html
@@ -1,4 +1,4 @@
-{{ block title }}<span style="display: none;">Construal Level Task</span>{{ endblock }}
+{{ block title }}<span style="display: none;">Reflection Task</span>{{ endblock }}
 {{ block content }}
 
 <style>
@@ -65,7 +65,7 @@
 
     <div class="instruction-box">
         <h4 class="mb-3">Reflection Task</h4>
-        <p class="lead">Before you begin the risk identification task, please take a moment to reflect on the Neo Fruit project.</p>
+        <p class="lead">Please take a moment to reflect on the Neo Fruit project.</p>
         
         {% if construal_level == 'Concrete Construal' %}
             <div class="question-prompt">
