--- a/spec_design/Consent.html
+++ b/spec_design/Consent.html
@@ -1,4 +1,4 @@
-{{ block title }}<span style="display: none;">Consent</span>{{ endblock }}
+{{ block title }}<span style="display: none;">Study Participation Consent</span>{{ endblock }}
 
 {{ block content }}
 
