--- a/spec_design/Controls.html
+++ b/spec_design/Controls.html
@@ -1,4 +1,4 @@
-{{ block title }}<span style="display: none;">Controls</span>{{ endblock }}
+{{ block title }}<span style="display: none;">Task Reflections</span>{{ endblock }}
 {{ block content }}
 
 <style>
@@ -91,7 +91,7 @@
 
 <div class="controls-container">
     <div class="mb-4">
-        <h4>📋 Controls</h4>
+        <h4>📋 Task Reflections</h4>
         <p class="text-muted">Please answer the following questions.</p>
     </div>
     
@@ -101,7 +101,7 @@
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">1</span>
-                How would you rate your own willingness to undertake risky business propositions compared to other individuals?
+                How would you rate your own <b>willingness to undertake risky business propositions </b> compared to other individuals?
             </p>
             <div class="likert-scale">
                 <div class="scale-option">
@@ -140,7 +140,7 @@
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">2</span>
-                How would you rate your own willingness to avoid risky business propositions compared to other individuals?
+                How would you rate your own <b>willingness to avoid</b> risky business propositions compared to other individuals?
             </p>
             <div class="likert-scale">
                 <div class="scale-option">
@@ -179,7 +179,7 @@
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">3</span>
-                How much effort did it take to complete the manipulation task?
+                <b>How much effort</b> did it take to complete the risk identification task?
             </p>
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
@@ -204,7 +204,7 @@
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">4</span>
-                How difficult was it to complete the manipulation task?
+                <b>How difficult</b> was it to complete the risk identification task?
             </p>
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
