--- a/spec_design/Demographics.html
+++ b/spec_design/Demographics.html
@@ -1,4 +1,4 @@
-{{ block title }}<span style="display: none;">Tell Us About Yourself</span>{{ endblock }}
+{{ block title }}<span style="display: none;">Demographic Information</span>{{ endblock }}
 {{ block content }}
 
 <style>
