--- a/spec_design/Manip_Check.html
+++ b/spec_design/Manip_Check.html
@@ -1,4 +1,4 @@
-{{ block title }}<span style="display: none;">Manipulation Check</span>{{ endblock }}
+{{ block title }}<span style="display: none;">Verification Questions</span>{{ endblock }}
 
 {{ block content }}
 
