--- a/spec_design/Spec_Condition.html
+++ b/spec_design/Spec_Condition.html
@@ -1,4 +1,4 @@
-{% block title %}<span style="display: none;">Video: Neo_Fruits Technology</span>{% endblock %}
+{% block title %}<span style="display: none;">Reflection Time</span>{% endblock %}
 
 {% block content %}
 
