--- a/stakeholder/Assessment.html
+++ b/stakeholder/Assessment.html
@@ -141,6 +141,10 @@
             <p>
                 Based on the provided context and your analysis, please explain your target price assessment considering:
             </p>
+            <p class="text-info">
+                <strong>Note:</strong> You have the opportunity to earn additional compensation based on the quality and depth of your written justification.</p>
+
+            </p>
             <ul>
                 <li>How do ESG factors and stakeholder feedback influence your valuation?</li>
                 <li>What impact will stakeholder engagement have on future performance?</li>
