--- a/stakeholder/Controls.html
+++ b/stakeholder/Controls.html
@@ -113,59 +113,7 @@
 </div>
 
 <div class="card mb-3">    <div class="card-body">
-        <h5 class="mb-3">3. I find Acme's disclosures credible.</h5>
-        
-        <div class="form-group">            <div class="row text-center g-0">
-                <div class="col">
-                    <div class="form-check d-flex flex-column align-items-center">
-                        <input class="form-check-input mb-2" type="radio" name="disclosure_credibility" value="1" required id="disclosure_credibility_1">
-                        <label class="form-check-label small text-center" for="disclosure_credibility_1">Strongly<br>disagree</label>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-check d-flex flex-column align-items-center">
-                        <input class="form-check-input mb-2" type="radio" name="disclosure_credibility" value="2" required id="disclosure_credibility_2">
-                        <label class="form-check-label small text-center" for="disclosure_credibility_2">Disagree</label>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-check d-flex flex-column align-items-center">
-                        <input class="form-check-input mb-2" type="radio" name="disclosure_credibility" value="3" required id="disclosure_credibility_3">
-                        <label class="form-check-label small text-center" for="disclosure_credibility_3">Somewhat<br>disagree</label>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-check d-flex flex-column align-items-center">
-                        <input class="form-check-input mb-2" type="radio" name="disclosure_credibility" value="4" required id="disclosure_credibility_4">
-                        <label class="form-check-label small text-center" for="disclosure_credibility_4">Neutral</label>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-check d-flex flex-column align-items-center">
-                        <input class="form-check-input mb-2" type="radio" name="disclosure_credibility" value="5" required id="disclosure_credibility_5">
-                        <label class="form-check-label small text-center" for="disclosure_credibility_5">Somewhat<br>agree</label>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-check d-flex flex-column align-items-center">
-                        <input class="form-check-input mb-2" type="radio" name="disclosure_credibility" value="6" required id="disclosure_credibility_6">
-                        <label class="form-check-label small text-center" for="disclosure_credibility_6">Agree</label>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-check d-flex flex-column align-items-center">
-                        <input class="form-check-input mb-2" type="radio" name="disclosure_credibility" value="7" required id="disclosure_credibility_7">
-                        <label class="form-check-label small text-center" for="disclosure_credibility_7">Strongly<br>agree</label>
-                    </div>
-                </div>
-            </div>
-        </div>
-        {{ formfield_errors 'disclosure_credibility' }}
-    </div>
-</div>
-
-<div class="card mb-3">    <div class="card-body">
-        <h5 class="mb-3">4. I think firms should sacrifice profitability to promote ESG.</h5>        <div class="form-group">            <div class="row text-center g-0">
+        <h5 class="mb-3">3. I think that ESG factors have a financially material impact on firm performance.</h5>        <div class="form-group">            <div class="row text-center g-0">
                 <div class="col">
                     <div class="form-check d-flex flex-column align-items-center">
                         <input class="form-check-input mb-2" type="radio" name="esg_relevance" value="1" required id="esg_relevance_1">
@@ -216,7 +164,7 @@
 
 <div class="card mb-3">
     <div class="card-body">
-        <h5 class="mb-3">5. I prefer to avoid conflicts and strive for harmony in group settings.</h5>
+        <h5 class="mb-3">4. I prefer to avoid conflicts and strive for harmony in group settings.</h5>
         
         <div class="form-group">
             <div class="row text-center g-0">
