--- a/spec_design/Mediators.html
+++ b/spec_design/Mediators.html
@@ -1,4 +1,4 @@
-{% block title %}<span style="display: none;">Mediators</span>{% endblock %}
+{% block title %}<span style="display: none;">Case Information Reflections</span>{% endblock %}
 
 {% block content %}
 
@@ -103,7 +103,7 @@
 
 <div class="controls-container">
     <div class="mb-4">
-        <h4>📋 Understanding Your Experience</h4>
+        <h4>📋 Case Information Reflections</h4>
         <p class="text-muted">Please indicate your level of agreement with the following statements about the information of the case.</p>
     </div>
 
@@ -119,8 +119,8 @@
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
                     <div class="scale-option">
-                        <input type="radio" name="horizon_temporal" value="{{ i }}" id="horizon_temporal_{{ i }}" required>
-                        <label class="radio-label" for="horizon_temporal_{{ i }}">
+                        <input type="radio" name="creative_thinking" value="{{ i }}" id="creative_thinking_{{ i }}" required>
+                        <label class="radio-label" for="creative_thinking_{{ i }}">
                             {% if i == 1 %}Strongly<br>disagree{% endif %}
                             {% if i == 2 %}Disagree{% endif %}
                             {% if i == 3 %}Somewhat<br>disagree{% endif %}
@@ -132,19 +132,19 @@
                     </div>
                 {% endfor %}
             </div>
-            {{ formfield_errors 'horizon_temporal' }}
+            {{ formfield_errors 'creative_thinking' }}
         </div>
 
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">2</span>
-                The information encouraged me to imagine possibilities that I wouldn't have thought of otherwise.
+                The information encouraged me to imagine possibilities that I wouldn't have considered otherwise.
             </p>
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
                     <div class="scale-option">
-                        <input type="radio" name="horizon_future" value="{{ i }}" id="horizon_future_{{ i }}" required>
-                        <label class="radio-label" for="horizon_future_{{ i }}">
+                        <input type="radio" name="imagination" value="{{ i }}" id="imagination_{{ i }}" required>
+                        <label class="radio-label" for="imagination_{{ i }}">
                             {% if i == 1 %}Strongly<br>disagree{% endif %}
                             {% if i == 2 %}Disagree{% endif %}
                             {% if i == 3 %}Somewhat<br>disagree{% endif %}
@@ -156,7 +156,7 @@
                     </div>
                 {% endfor %}
             </div>
-            {{ formfield_errors 'horizon_future' }}
+            {{ formfield_errors 'imagination' }}
         </div>
 
         <div class="question-box">
@@ -167,8 +167,8 @@
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
                     <div class="scale-option">
-                        <input type="radio" name="horizon_systemic" value="{{ i }}" id="horizon_systemic_{{ i }}" required>
-                        <label class="radio-label" for="horizon_systemic_{{ i }}">
+                        <input type="radio" name="broader_implications" value="{{ i }}" id="broader_implications_{{ i }}" required>
+                        <label class="radio-label" for="broader_implications_{{ i }}">
                             {% if i == 1 %}Strongly<br>disagree{% endif %}
                             {% if i == 2 %}Disagree{% endif %}
                             {% if i == 3 %}Somewhat<br>disagree{% endif %}
@@ -180,7 +180,7 @@
                     </div>
                 {% endfor %}
             </div>
-            {{ formfield_errors 'horizon_systemic' }}
+            {{ formfield_errors 'broader_implications' }}
         </div>
     </div>
 
@@ -196,8 +196,8 @@
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
                     <div class="scale-option">
-                        <input type="radio" name="narrative_comprehension" value="{{ i }}" id="narrative_comprehension_{{ i }}" required>
-                        <label class="radio-label" for="narrative_comprehension_{{ i }}">
+                        <input type="radio" name="story_format" value="{{ i }}" id="story_format_{{ i }}" required>
+                        <label class="radio-label" for="story_format_{{ i }}">
                             {% if i == 1 %}Strongly<br>disagree{% endif %}
                             {% if i == 2 %}Disagree{% endif %}
                             {% if i == 3 %}Somewhat<br>disagree{% endif %}
@@ -209,7 +209,7 @@
                     </div>
                 {% endfor %}
             </div>
-            {{ formfield_errors 'narrative_comprehension' }}
+            {{ formfield_errors 'story_format' }}
         </div>
 
         <div class="question-box">
@@ -220,8 +220,8 @@
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
                     <div class="scale-option">
-                        <input type="radio" name="narrative_relatable" value="{{ i }}" id="narrative_relatable_{{ i }}" required>
-                        <label class="radio-label" for="narrative_relatable_{{ i }}">
+                        <input type="radio" name="real_world_relatable" value="{{ i }}" id="real_world_relatable_{{ i }}" required>
+                        <label class="radio-label" for="real_world_relatable_{{ i }}">
                             {% if i == 1 %}Strongly<br>disagree{% endif %}
                             {% if i == 2 %}Disagree{% endif %}
                             {% if i == 3 %}Somewhat<br>disagree{% endif %}
@@ -233,7 +233,7 @@
                     </div>
                 {% endfor %}
             </div>
-            {{ formfield_errors 'narrative_relatable' }}
+            {{ formfield_errors 'real_world_relatable' }}
         </div>
 
         <div class="question-box">
@@ -244,8 +244,8 @@
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
                     <div class="scale-option">
-                        <input type="radio" name="narrative_processing" value="{{ i }}" id="narrative_processing_{{ i }}" required>
-                        <label class="radio-label" for="narrative_processing_{{ i }}">
+                        <input type="radio" name="processing_effectiveness" value="{{ i }}" id="processing_effectiveness_{{ i }}" required>
+                        <label class="radio-label" for="processing_effectiveness_{{ i }}">
                             {% if i == 1 %}Strongly<br>disagree{% endif %}
                             {% if i == 2 %}Disagree{% endif %}
                             {% if i == 3 %}Somewhat<br>disagree{% endif %}
@@ -257,7 +257,7 @@
                     </div>
                 {% endfor %}
             </div>
-            {{ formfield_errors 'narrative_processing' }}
+            {{ formfield_errors 'processing_effectiveness' }}
         </div>
     </div>
 
@@ -273,8 +273,8 @@
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
                     <div class="scale-option">
-                        <input type="radio" name="embodiment_tangible" value="{{ i }}" id="embodiment_tangible_{{ i }}" required>
-                        <label class="radio-label" for="embodiment_tangible_{{ i }}">
+                        <input type="radio" name="abstract_to_concrete" value="{{ i }}" id="abstract_to_concrete_{{ i }}" required>
+                        <label class="radio-label" for="abstract_to_concrete_{{ i }}">
                             {% if i == 1 %}Strongly<br>disagree{% endif %}
                             {% if i == 2 %}Disagree{% endif %}
                             {% if i == 3 %}Somewhat<br>disagree{% endif %}
@@ -286,7 +286,7 @@
                     </div>
                 {% endfor %}
             </div>
-            {{ formfield_errors 'embodiment_tangible' }}
+            {{ formfield_errors 'abstract_to_concrete' }}
         </div>
 
         <div class="question-box">
@@ -297,8 +297,8 @@
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
                     <div class="scale-option">
-                        <input type="radio" name="embodiment_visceral" value="{{ i }}" id="embodiment_visceral_{{ i }}" required>
-                        <label class="radio-label" for="embodiment_visceral_{{ i }}">
+                        <input type="radio" name="impact_feeling" value="{{ i }}" id="impact_feeling_{{ i }}" required>
+                        <label class="radio-label" for="impact_feeling_{{ i }}">
                             {% if i == 1 %}Strongly<br>disagree{% endif %}
                             {% if i == 2 %}Disagree{% endif %}
                             {% if i == 3 %}Somewhat<br>disagree{% endif %}
@@ -310,19 +310,19 @@
                     </div>
                 {% endfor %}
             </div>
-            {{ formfield_errors 'embodiment_visceral' }}
+            {{ formfield_errors 'impact_feeling' }}
         </div>
 
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">9</span>
-                The information allowed me to mentally experience what the risks might be like.
+                The information allowed me to experience what the risks might be like.
             </p>
             <div class="likert-scale">
                 {% for i in range(1, 8) %}
                     <div class="scale-option">
-                        <input type="radio" name="embodiment_experiential" value="{{ i }}" id="embodiment_experiential_{{ i }}" required>
-                        <label class="radio-label" for="embodiment_experiential_{{ i }}">
+                        <input type="radio" name="mental_experience" value="{{ i }}" id="mental_experience_{{ i }}" required>
+                        <label class="radio-label" for="mental_experience_{{ i }}">
                             {% if i == 1 %}Strongly<br>disagree{% endif %}
                             {% if i == 2 %}Disagree{% endif %}
                             {% if i == 3 %}Somewhat<br>disagree{% endif %}
@@ -334,7 +334,7 @@
                     </div>
                 {% endfor %}
             </div>
-            {{ formfield_errors 'embodiment_experiential' }}
+            {{ formfield_errors 'mental_experience' }}
         </div>
     </div>
 
