--- a/stakeholder/Controls.html
+++ b/stakeholder/Controls.html
@@ -113,7 +113,7 @@
 </div>
 
 <div class="card mb-3">    <div class="card-body">
-        <h5 class="mb-3">3. I think that ESG factors have a financially material impact on firm performance.</h5>        <div class="form-group">            <div class="row text-center g-0">
+        <h5 class="mb-3">3. I think that firms should integrate ESG factors into their strategy.</h5>        <div class="form-group">            <div class="row text-center g-0">
                 <div class="col">
                     <div class="form-check d-flex flex-column align-items-center">
                         <input class="form-check-input mb-2" type="radio" name="esg_relevance" value="1" required id="esg_relevance_1">
