--- a/stakeholder/Mediators.html
+++ b/stakeholder/Mediators.html
@@ -1,4 +1,4 @@
-{{ block title }}Understanding Your Perceptions{{ endblock }}
+{{ block title }}About the Case{{ endblock }}
 {{ block content }}
 
 <div class="card mb-3">
