--- a/stakeholder/Condition2.html
+++ b/stakeholder/Condition2.html
@@ -8,34 +8,34 @@
     <ul>
         <li>E (Environment) = Greenhouse Gas Emissions – the relevance of reducing GHG</li>
         <li>S (Social) = Diversity & Inclusion – the relevance of supporting diversity and inclusion</li>
-        <li>G (Governance) = Regulatory & Legal Compliance – the relevance of adhering to business integrity and transparency</li>
+        <li>G (Governance) = Business Integrity & Transparency – the relevance of adhering to business integrity and transparency</li>
     </ul>
 
     {% if stakeholder_consensus == 'Low Stakeholder Consensus' %}
     <p>
         The <b>downward facing trendline</b> indicates a <b>low consensus</b> between the internal and external stakeholder priorities. 
         In other words, internal stakeholders deem ESG themes as relevant that are not deemed as relevant by external stakeholders and vice versa.
-        <b>For the examples above, the consensus between internal and external stakeholders is low.</b>
+        For the examples above, the consensus between internal and external stakeholders is low.
     </p>
     <img src="/static/images/Negative.png" alt="Figure1" style="max-width:100%; height:auto;">
         <p>
             On the horizontal (x-axis) of the chart, you see how internal stakeholders prioritized the different ESG themes. 
             On the vertical (y-axis) of the chart, you see how external stakeholders prioritized the different ESG themes.
-            An <b>example for internal stakeholders</b> would be Acme's employees, executive management, board of directors, chairman, or CEO, while an <b>example for external stakeholders</b> would be Acme's customers, investors, suppliers, regulators, NGOs, community members, or media.
+            <b>Examples for internal stakeholders</b> would be Acme's employees, executive management, board of directors, chairman, or CEO, while <b>examples for external stakeholders</b> would be Acme's customers, investors, suppliers, regulators, NGOs, community members, or media.
 
         </p>
 
     {% elif stakeholder_consensus == 'High Stakeholder Consensus' %}
     <p>
         The <b>upward facing trendline</b> indicates a <b>high consensus</b> between the internal and external stakeholder priorities. 
-        In other words, <b>internal stakeholders deem ESG themes as relevant that are also deemed as relevant by external stakeholders and vice versa</b>.
-        <b>For the examples above, the consensus between internal and external stakeholders is high.</b>
+        In other words, internal stakeholders deem ESG themes as relevant that are also deemed as relevant by external stakeholders and vice versa.
+        For the examples above, the consensus between internal and external stakeholders is high.
     </p>
     <img src="/static/images/Positive.png" alt="Figure1" style="max-width:100%; height:auto;">
         <p>
             On the horizontal (x-axis) of the chart, you see how internal stakeholders prioritized the different ESG themes. 
             On the vertical (y-axis) of the chart, you see how external stakeholders prioritized the different ESG themes.
-            An <b>example for internal stakeholders</b> would be Acme's employees, executive management, board of directors, chairman, or CEO, while an <b>example for external stakeholders</b> would be Acme's customers, investors, suppliers, regulators, NGOs, community members, or media.
+            <b>Examples for internal stakeholders</b> would be Acme's employees, executive management, board of directors, chairman, or CEO, while <b>examples for external stakeholders</b> would be Acme's customers, investors, suppliers, regulators, NGOs, community members, or media.
         </p>
     {% endif %}
 
