--- a/spec_design/Assessment.html
+++ b/spec_design/Assessment.html
@@ -105,7 +105,7 @@
         <ul class="text-muted" style="font-size: 0.9em;">
             <li>Think about potential risks across different domains</li>
             <li>Describe each risk clearly and specifically</li>
-            <li>Start with 10 fields - you can add more by clicking "Add Another Risk" if needed</li>
+            <li>Add more fields by clicking "Add Another Risk" if needed</li>
             <li>You can leave fields blank if you don't identify that many risks</li>
         </ul>
     </div>
