--- a/spec_design/Background.html
+++ b/spec_design/Background.html
@@ -124,8 +124,7 @@
         <p style="margin-bottom: 0">
             This innovative food technology project represents a <b>significant advancement</b> in 
             addressing nutritional deficiencies in modern diets. However, it <b>also raises important 
-            questions</b> about consumer acceptance, regulatory compliance, food safety standards, 
-            and the environmental impact of synthetic food production.
+            questions</b> about potential risks.
         </p>
         <p class="text-muted mt-2" style="margin-bottom: 0">
             — Meydan Levy, Chief Innovation Officer
