--- a/spec_design/CLT_Condition.html
+++ b/spec_design/CLT_Condition.html
@@ -65,7 +65,7 @@
 
     <div class="instruction-box">
         <h4 class="mb-3">Reflection Task</h4>
-        <p class="lead">Please take a moment to reflect on the Neo Fruit project.</p>
+        <p class="lead">Please take a moment to reflect on the Neo Fruits technology.</p>
         
         {% if construal_level == 'Concrete Construal' %}
             <div class="question-prompt">
