--- a/spec_design/Controls.html
+++ b/spec_design/Controls.html
@@ -1,4 +1,4 @@
-{{ block title }}<span style="display: none;">Task Reflections</span>{{ endblock }}
+{{ block title }}<span style="display: none;">About You</span>{{ endblock }}
 {{ block content }}
 
 <style>
@@ -91,7 +91,7 @@
 
 <div class="controls-container">
     <div class="mb-4">
-        <h4>📋 Task Reflections</h4>
+        <h4>About You</h4>
         <p class="text-muted">Please answer the following questions.</p>
     </div>
     
@@ -179,7 +179,7 @@
         <div class="question-box">
             <p class="mb-3">
                 <span class="question-number">3</span>
-                How would you rate your <b>level of creativity</b> compared to others?
+                How would you rate your <b>level of creativity</b> compared to other individuals?
             </p>
             <div class="likert-scale">
                 <div class="scale-option">
