--- a/spec_design/Manip_Check.html
+++ b/spec_design/Manip_Check.html
@@ -86,7 +86,7 @@
     <div class="question-box">
         <p class="mb-3">
             <span class="question-number">1</span>
-            Did you see a video of the Neo Fruits product innovation during the study?
+            Did you see a video of Neo Fruits during the study?
         </p>
         <div class="radio-group">
             <label class="radio-option">
@@ -95,7 +95,7 @@
             </label>
             <label class="radio-option">
                 <input type="radio" name="video_check" value="Speculative Design Present">
-                Yes, I <b>&nbsp;saw a video&nbsp;</b> demonstration 🎥
+                Yes, I <b>&nbsp;saw a video&nbsp;</b> 🎥
             </label>
         </div>
         {{ formfield_errors 'video_check' }}
@@ -105,16 +105,16 @@
     <div class="question-box">
         <p class="mb-3">
             <span class="question-number">2</span>
-           Before you identified the risks, which of the following describes your task to reflect on the NutriGen Foods' technology development process?
+           Before you identified the risks, which of the following describes your task to reflect on the Neo Fruits development process?
         </p>
         <div class="radio-group">
             <label class="radio-option">
                 <input type="radio" name="construal_check" value="Concrete Construal" required>
-                <span>I described<b>&nbsp;how&nbsp;</b>the NutriGen team is developing the product (the specific steps and procedures) 🔧</span>
+                <span>I described<b>&nbsp;how&nbsp;</b>the NutriGen team is developing the technology (the specific steps and procedures)</span>
             </label>
             <label class="radio-option">
                 <input type="radio" name="construal_check" value="Abstract Construal">
-                <span>I described<b>&nbsp;why&nbsp;</b>the NutriGen team is developing the product (the goals and purposes) 🎯</span>
+                <span>I described<b>&nbsp;why&nbsp;</b>the NutriGen team is developing the technology (the goals and purposes)</span>
             </label>
         </div>
         {{ formfield_errors 'construal_check' }}
