--- a/spec_design/Mediators.html
+++ b/spec_design/Mediators.html
@@ -1,4 +1,4 @@
-{% block title %}<span style="display: none;">Case Information Reflections</span>{% endblock %}
+{% block title %}<span style="display: none;">About Neo Fruits</span>{% endblock %}
 
 {% block content %}
 
@@ -103,8 +103,8 @@
 
 <div class="controls-container">
     <div class="mb-4">
-        <h4>Case Information Reflections</h4>
-        <p class="text-muted">Please indicate your level of agreement with the following statements about the information of the case.</p>
+        <h4>About Neo Fruits</h4>
+        <p class="text-muted">Please indicate your level of agreement with the following statements about the information you received about NutriGen Foods' Neo Fruits technology.</p>
     </div>
 
     <!-- Section 1: Horizon Expansion -->
