--- a/spec_design/Assessment.html
+++ b/spec_design/Assessment.html
@@ -101,7 +101,7 @@
 <div class="assessment-container">
     <div class="mb-4">
         <h4>📋 Risk Identification Task</h4>
-        <p class="text-muted">Please identify the risks that you perceive with the NutriGen Foods Neo Fruits project and write them below using a numbered list.</p>
+        <p class="text-muted">Please identify risks related to the Neo Fruits technology and write them below using the list below.</p>
         <ul class="text-muted" style="font-size: 0.9em;">
             <li>Think about potential risks across different domains</li>
             <li>Describe each risk clearly and specifically</li>
