--- a/crossflexed/expected_condition.html
+++ b/crossflexed/expected_condition.html
@@ -15,8 +15,8 @@
         min-height: 100vh;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        padding: 20px;
+        justify-content: flex-start;
+        padding: 40px 20px 20px 20px;
         background: white;
     }
     
