--- a/crossflexed/Context.html
+++ b/crossflexed/Context.html
@@ -328,6 +328,10 @@
                 <input type="radio" name="cooldown_location_display" value="Other" id="q4_3" data-field="cooldown_location">
                 <label for="q4_3" class="option-label">Other</label>
             </div>
+            <div class="option">
+                <input type="radio" name="cooldown_location_display" value="Prefer not to say" id="q4_4" data-field="cooldown_location">
+                <label for="q4_4" class="option-label">Prefer not to say</label>
+            </div>
         </div>
         
         <!-- Conditional text input for "Other" -->
