--- a/crossflexed/Controls.html
+++ b/crossflexed/Controls.html
@@ -190,7 +190,7 @@
     <!-- Question 1: Likelihood -->
     <div class="question-screen active" data-screen="1">
         <div class="question-number">FEEDBACK | QUESTION 13 OF 17</div>
-        <div class="question-text">If CrossFit Bern offered such a post-workout recovery solution, how likely are you to use it?</div>
+        <div class="question-text">If CrossFit Bern offered such a post-workout recovery solution, how often would you use it?</div>
         
         <div class="option-group">
             <div class="option">
