--- a/crossflexed/Demographics.html
+++ b/crossflexed/Demographics.html
@@ -236,6 +236,10 @@
                 <input type="radio" name="age_display" value="Over 65 years" id="q2_6" data-field="age">
                 <label for="q2_6" class="option-label">Over 65 years</label>
             </div>
+            <div class="option">
+                <input type="radio" name="age_display" value="Prefer not to say" id="q2_7" data-field="age">
+                <label for="q2_7" class="option-label">Prefer not to say</label>
+            </div>
         </div>
         
         <div class="navigation-buttons">
@@ -265,6 +269,10 @@
             <div class="option">
                 <input type="radio" name="crossfit_experience_display" value="More than 10 years" id="q3_4" data-field="crossfit_experience">
                 <label for="q3_4" class="option-label">More than 10 years</label>
+            </div>
+            <div class="option">
+                <input type="radio" name="crossfit_experience_display" value="Prefer not to say" id="q3_5" data-field="crossfit_experience">
+                <label for="q3_5" class="option-label">Prefer not to say</label>
             </div>
         </div>
         
