--- a/crossflexed/Introduction.html
+++ b/crossflexed/Introduction.html
@@ -116,6 +116,9 @@
             By continuing with this survey, we assume that you consent to our use of your data for research purposes.
         </div>
 
+        <p class="subtitle-text">Thank you for your support,<br>Frantz, Dominic & Reto
+</p>
+
         <div class="btn-container">
             <button type="button" class="nav-btn btn-next" onclick="document.querySelector('form').submit()">Next →</button>
         </div>
