operating income twist

--- a/budgeting_singleplayer/pages/AdviceFeedback.html
+++ b/budgeting_singleplayer/pages/AdviceFeedback.html
@@ -42,12 +42,12 @@
         {% if advice_condition == 'human_expert' %}
             <div class="alert alert-success mb-3">
                 <strong>Source:</strong> This advice comes from a <strong>civil servant</strong> who specializes in 
-                Public Services budgeting and has extensive experience analyzing this expense account.
+                municipal finance and has extensive experience analyzing operating income forecasts.
             </div>
         {% else %}
             <div class="alert alert-info mb-3">
                 <strong>Source:</strong> This advice comes from an <strong>AI model</strong> that has been specially 
-                trained on Public Services budgeting data and municipal expense patterns.
+                trained on municipal revenue data and operating income patterns.
             </div>
         {% endif %}
 
