--- a/budgeting_singleplayer/pages/Instructions.html
+++ b/budgeting_singleplayer/pages/Instructions.html
@@ -11,7 +11,7 @@
     <div class="card-body">
         <p>In this study, you will take on a role in a public budgeting scenario. Your task is to:</p>
         <ol>
-            <li><strong>Submit a budget forecast</strong> for a Public Services expense account</li>
+            <li><strong>Submit a budget forecast</strong> for a municipality's operating income</li>
             <li><strong>Decide on a budget adjustment</strong> (increase or decrease from your forecast)</li>
             <li><strong>Justify your decision</strong> in writing</li>
             <li><strong>Review advice</strong> from an expert source</li>
@@ -25,14 +25,15 @@
         <h5 class="mb-0">Budget Context</h5>
     </div>
     <div class="card-body">
-        <p>You will be working with a <strong>Public Services</strong> expense account for a Swiss municipality. 
-        This account covers essential services provided to citizens.</p>
+        <p>You will be working with the <strong>Operating Income</strong> budget for a Swiss municipality. 
+        Operating income represents the municipality's revenue from taxes, fees, and other regular sources.</p>
         <p>You will see:</p>
         <ul>
-            <li>Historical expense data from the past 5 years</li>
-            <li>The current year's actual expenses</li>
+            <li>Historical data comparing budgeted vs. actual operating income over the past 10 years</li>
+            <li>A pattern where actual income has consistently exceeded budgeted amounts</li>
+            <li>An increasing gap between budgeted and actual results in recent years</li>
         </ul>
-        <p>Your task is to forecast next year's expenses and set an appropriate budget.</p>
+        <p>Your task is to forecast next year's operating income and set an appropriate budget.</p>
     </div>
 </div>
 
